--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<meta name="msapplication-TileImage" content="icons/favicon//ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
