--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 			</div>
 
 			<nav class="ul menu__list">
-				<li class="menu__link"><a href="#">ABOUT ME.</a></li>
+				<li class="menu__link"><a href="#aboutme">ABOUT ME.</a></li>
 				<li class="menu__link"><a href="#">MY EXPERIENCE.</a></li>
 				<li class="menu__link"><a href="#">MY SKILLS.</a></li>
 				<li class="menu__link"><a href="#">MY WORKS.</a></li>
 				<li class="menu__link"><a href="#">PRICE LIST.</a></li>
-				<li class="menu__link"><a href="#">CONTACTS.</a></li>
+				<li class="menu__link"><a href="#hireme">CONTACTS.</a></li>
 			</nav>
 
 			<div class="menu__social">
