--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
       </div>
    </section>
 
-   <section class="about" id="aboutme">
+   <section class="about">
       <div class="container">
-         <div class="about__wrapper">
+         <div class="about__wrapper" id="aboutme">
             <div class="about__photo">
                <img src="img/main_photo.jpg" alt="photo">
             </div>
@@ -221,8 +221,8 @@
       </div>
    </section> -->
 
-   <section class="resume" id="experience">
-      <div class="container">
+   <section class="resume">
+      <div class="container" id="experience">
          <h2 class="title title_fz16 title__section-title">Experience.</h2>
          <div class="title title_fz36 title__section-subtitle">How can I help you</div>
          <div class="divider"></div>
@@ -327,8 +327,8 @@
       </div>
    </section>
 
-   <section class="skills" id="skills">
-      <div class="container">
+   <section class="skills">
+      <div class="container" id="skills">
          <h2 class="title title_fz16 title__section-title">Skills</h2>
          <div class="title title_fz36 title__section-subtitle">What I use in my work</div>
          <div class="divider"></div>
@@ -437,8 +437,8 @@
       </div>
    </section>
 
-   <section class="portfolio" id="works">
-      <div class="container">
+   <section class="portfolio">
+      <div class="container" id="works">
          <h2 class="title title_fz16 title__section-title">Portfolio</h2>
          <div class="title title_fz36 title__section-subtitle">My works</div>
          <div class="divider"></div>
@@ -515,8 +515,8 @@
       </div>
    </section>
 
-   <section class="price" id="pricelist">
-      <div class="container">
+   <section class="price">
+      <div class="container" id="pricelist">
          <h2 class="title title_fz16 title__section-title">Price list</h2>
          <div class="divider"></div>
 
@@ -569,8 +569,8 @@
       </div>
    </section>
 
-   <section class="contacts" id="hireme">
-      <div class="container">
+   <section class="contacts">
+      <div class="container" id="hireme">
          <div class="contacts__wrapper" id="hire">
             <div class="contacts__photo">
                <img src="img/2main_photo.jpg" alt="photo">
