--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
          <div class="portfolio__wrapper">
             <div class="portfolio__box">
-               <a href="#">
+               <a href="https://viacheslav-savelyev.github.io/taxi-website-portfolio/">
                   <div class="portfolio__box-img">
                      <img src="img/works/uber.jpg" alt="uber">
                   </div>
@@ -458,7 +458,7 @@
             </div>
 
             <div class="portfolio__box">
-               <a href="#" class="portfolio__item">
+               <a href="https://viacheslav-savelyev.github.io/HRMs-store/" class="portfolio__item">
                   <div class="portfolio__box-img">
 
                      <img src="img/works/pulse.jpg" alt="pulse">
