--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             </div>
 
             <div class="portfolio__box">
-               <a href="#" class="portfolio__item">
+               <a href="#hire" class="portfolio__item">
                   <div class="portfolio__box-img">
 
                      <img src="img/works/your-website.jpg" alt="pulse">
@@ -487,7 +487,7 @@
             </div>
 
             <div class="portfolio__box">
-               <a href="#" class="portfolio__item">
+               <a href="#hire" class="portfolio__item">
                   <div class="portfolio__box-img">
 
                      <img src="img/works/your-website.jpg" alt="pulse">
