--- a/index.html
+++ b/index.html
@@ -634,6 +634,7 @@
    </a>
 
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
    <script src="js/script.js"></script>
 </body>
 
